create new method which combines both filter method (filterMovieList) changed a few null exceptions.