@@ -53,7 +53,7 @@ class MovieTest {
         boolean checker = true;
 
         expected.add(new Movie("Inception", "A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.", Arrays.asList(Genre.ACTION, Genre.SCIENCE_FICTION, Genre.THRILLER)));
-        expected.add(new Movie("Legally Blonde", "Elle Woods, a fashionable sorority queen, is dumped by her boyfriend. She decides to follow him to law school. While there, she figures out that there is more to her than just looks.", Arrays.asList(Genre.COMEDY)));
+        expected.add(new Movie("Legally Blonde", "Elle Woods, a fashionable sorority queen, is dumped by her boyfriend. She decides to follow him to law school. While there, she figures out that there is more to her than just looks.", List.of(Genre.COMEDY)));
         expected.add(new Movie("The Dark Knight", "When the menace known as the Joker emerges from his mysterious past, he wreaks havoc and chaos on the people of Gotham. The Dark Knight must accept one of the greatest psychological and physical tests of his ability to fight injustice.", Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.CRIME)));
 
         //Act
@@ -63,6 +63,7 @@ class MovieTest {
             // Legally Blonde (expected) == Legally Blonde (actual)
             if (!(expected.get(i).getTitle().equals(actual.get(i).getTitle()))) {
                 checker = false;
+                break;
             }
         }
         //Arrange
@@ -78,7 +79,7 @@ class MovieTest {
         boolean checker = true;
 
         expected.add(new Movie("The Dark Knight", "When the menace known as the Joker emerges from his mysterious past, he wreaks havoc and chaos on the people of Gotham. The Dark Knight must accept one of the greatest psychological and physical tests of his ability to fight injustice.", Arrays.asList(Genre.ACTION, Genre.DRAMA, Genre.CRIME)));
-        expected.add(new Movie("Legally Blonde", "Elle Woods, a fashionable sorority queen, is dumped by her boyfriend. She decides to follow him to law school. While there, she figures out that there is more to her than just looks.", Arrays.asList(Genre.COMEDY)));
+        expected.add(new Movie("Legally Blonde", "Elle Woods, a fashionable sorority queen, is dumped by her boyfriend. She decides to follow him to law school. While there, she figures out that there is more to her than just looks.", List.of(Genre.COMEDY)));
         expected.add(new Movie("Inception", "A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.", Arrays.asList(Genre.ACTION, Genre.SCIENCE_FICTION, Genre.THRILLER)));
 
         //Act
@@ -88,6 +89,7 @@ class MovieTest {
             // Legally Blonde (expected) == Legally Blonde (actual)
             if (!(expected.get(i).getTitle().equals(actual.get(i).getTitle()))) {
                 checker = false;
+                break;
             }
         }
         //Arrange
@@ -176,7 +178,7 @@ class MovieTest {
 
 
         // Act
-        actual = Movie.FilterMovieListByQuery(movieList, query);
+        actual = Movie.filterMovieListByQuery(movieList, query);
 
         // Assert
         System.out.println(expected+ "\n" +actual);
@@ -196,7 +198,7 @@ class MovieTest {
         expected.add(new Movie("Inception", "A thief who steals corporate secrets through the use of dream-sharing technology is given the inverse task of planting an idea into the mind of a CEO.", Arrays.asList(Genre.ACTION, Genre.SCIENCE_FICTION, Genre.THRILLER)));
 
         //Act
-        actual = Movie.FilterMovieListByQuery(movieList, query);
+        actual = Movie.filterMovieListByQuery(movieList, query);
 
         //Assert
         System.out.println(expected+ "\n" +actual);
@@ -213,7 +215,7 @@ class MovieTest {
         String query = "*";
 
         //Act
-        actual = Movie.FilterMovieListByQuery(movieList, query);
+        actual = Movie.filterMovieListByQuery(movieList, query);
 
         //Assert
         System.out.println(expected + "\n" + actual);
